deployment/k8s-config/kustomize/overlays/keel-dev/skaha/config/service-castor-etc.yaml
apiVersion: v1
kind: Service
metadata:
  name: skaha-castor-etc-svc-${skaha.sessionid}
  labels:
    run: skaha-castor-etc-svc-${skaha.sessionid}
spec:
  ports:
  - port: 5000
    protocol: TCP
    name: http-connection
  selector:
    canfar-net-sessionID: ${skaha.sessionid}
