deployment/k8s-config/kustomize/overlays/keel-dev/skaha/config/service-desktop.yaml
apiVersion: v1
kind: Service
metadata:
  name: skaha-desktop-svc-${skaha.sessionid}
  labels:
    run: skaha-desktop-svc-${skaha.sessionid}
spec:
  ports:
  - port: 6901
    protocol: TCP
    name: http-connection
  selector:
    canfar-net-sessionID: ${skaha.sessionid}
