deployment/k8s-config/kustomize/overlays/keel-dev/skaha/config/ingress-contributed.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: skaha-contributed-middleware-${skaha.sessionid}
spec:
  replacePathRegex:
    regex: ^/session/contrib/${skaha.sessionid}(/|$)(.*)
    replacement: /$2

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: skaha-contributed-ingress-${skaha.sessionid}
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`rc-uv.canfar.net`) && PathPrefix(`/session/contrib/${skaha.sessionid}/`)
    services:
    - kind: Service
      name: skaha-contributed-svc-${skaha.sessionid}
      port: 5000
      scheme: http
    middlewares:
      - name: skaha-contributed-middleware-${skaha.sessionid}
