deployment/k8s-config/kustomize/overlays/keel-dev/skaha/config/ingress-desktop.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: skaha-desktop-middleware-${skaha.sessionid}
spec:
  replacePathRegex:
    regex: ^/session/desktop/${skaha.sessionid}(/|$)(.*)
    replacement: /$2

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: skaha-desktop-ingress-${skaha.sessionid}
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`rc-uv.canfar.net`) && PathPrefix(`/session/desktop/${skaha.sessionid}/`)
    services:
    - kind: Service
      name: skaha-desktop-svc-${skaha.sessionid}
      port: 6901
      scheme: http
    middlewares:
      - name: skaha-desktop-middleware-${skaha.sessionid}
