deployment/k8s-config/kustomize/overlays/keel-dev/skaha/config/ingress-pluto.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: skaha-pluto-ingress-${skaha.sessionid}
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`rc-uv.canfar.net`) && PathPrefix(`/session/pluto/${skaha.sessionid}/`)
    services:
    - kind: Service
      name: skaha-pluto-svc-${skaha.sessionid}
      port: 1234
      scheme: http
